<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 Daniel Velazco

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="app_name">Emergency Alert For Wear</string>
    <string name="app_name_long">Emergency Alert For Android Wear</string>
    <string name="app_name_short">Emergency Alert</string>

    <!-- Preferences -->
    <string name="pref_category_general">Configuration</string>
    <string name="pref_category_sms_config">SMS Configuration</string>
    <string name="toast_enable_service_msg">Enable the service called \'%1$s\'</string>
    <string name="pref_phone_number">Phone number</string>
    <string name="pref_phone_number_summary">Phone number to send SMS to</string>
    <string name="pref_sms_emergency_message">Emergency message</string>
    <string name="pref_sms_emergency_message_summary">Emergency message to send as SMS in case of emergency</string>
    <string name="pref_sms_send_location">Send location</string>
    <string name="pref_sms_send_location_summary">Send your location in a separate message after the emergency message is sent.</string>
    <string name="pref_show_notification">Show notification</string>
    <string name="pref_show_notification_summary">Show a notification on your phone when an emergency alert is triggered from the watch.</string>
    <string name="pref_use_confirmation_button">Use a confirmation button on watch</string>
    <string name="pref_use_confirmation_button_sry_on">A confirmation is required after you start an emergency alert from the watch</string>
    <string name="pref_use_confirmation_button_sry_off">A delayed confirmation will be shown when an emergency alert is triggered from the watch, if not cancelled, the alert will be sent.</string>

    <string name="default_emergency_message">Automatic emergency message: Something happened!</string>

    <string name="message_last_location">Last known location: http://maps.google.com/maps?q=%1$s,%2$s on %3$s</string>
    <string name="message_current_location">Current location: http://maps.google.com/maps?q=%1$s,%2$s on %3$s</string>

    <string name="notification_title">Emergency Alert for Wear</string>
    <string name="notification_content">An emergency alert was triggered by your Watch.</string>

</resources>
