<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 Daniel Velazco

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_general">

        <CheckBoxPreference
            android:key="_show_notification"
            android:title="@string/pref_show_notification"
            android:summary="@string/pref_show_notification_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_sms_config">

        <EditTextPreference
            android:key="_contact_phone_number"
            android:title="@string/pref_phone_number"
            android:summary="@string/pref_phone_number_summary"
            android:inputType="phone"
            android:defaultValue="" />

        <EditTextPreference
            android:key="_sms_emergency_message"
            android:title="@string/pref_sms_emergency_message"
            android:summary="@string/pref_sms_emergency_message_summary"
            android:inputType="text"
            android:maxLength="140"
            android:singleLine="true"
            android:defaultValue="@string/default_emergency_message" />

        <CheckBoxPreference
            android:key="_sms_send_location"
            android:title="@string/pref_sms_send_location"
            android:summary="@string/pref_sms_send_location_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>